# ConcurrentHuffman

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux.yml  macos.yml
benchmark/: bench_compressed.txt  bench_huffman.cpp
example/: example.cpp  example_uncompressed.txt
include/: concurrent_huffman.h  decoder.h  encoder.h  node.h
include/concurrent/: queue.h  task.h  thread_joiner.h  thread_pool.h
src/: concurrent_huffman.cpp  decoder.cpp  encoder.cpp  node.cpp
test/: test_concurrent_huffman.cpp
test/test_inputs/: test1_input.txt  test2_input.txt  test3_input.txt  test4_input.txt
